[project]
name = "comfyui-ping"
description = "Browser-played workflow success and failure audio notifications for ComfyUI"
version = "1.0.2"
requires-python = ">=3.12"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
  "Operating System :: OS Independent",
]

[dependency-groups]
dev = [
  "bump-my-version>=1.2.2",
  "pytest>=8.4.2",
]

[project.urls]
Repository = "https://github.com/PBandDev/comfyui-ping"
Documentation = "https://github.com/PBandDev/comfyui-ping#readme"
"Bug Tracker" = "https://github.com/PBandDev/comfyui-ping/issues"

[tool.comfy]
PublisherId = "pbanddev"
DisplayName = "comfyui-ping"
Icon = "https://raw.githubusercontent.com/PBandDev/comfyui-ping/main/assets/icon.svg"
requires-comfyui = ">=0.3.0"
includes = ['dist/']

[tool.bumpversion]
current_version = "1.0.2"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
commit = false
tag = false
tag_name = "v{new_version}"
tag_message = "Release version {new_version}"
message = "chore: bump version to {new_version} [skip ci]"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "package.json"
search = '"version": "{current_version}"'
replace = '"version": "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/index.ts"
search = 'Version {current_version}'
replace = 'Version {new_version}'
